--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,4 @@ PEOPLE THAT CONTRIBUTED TO THIS PROJECT ARE:
 ------------------------------------------------------------------------------
 ------------------------------------------------------------------------------
 ## 1) Ike Ifeanyi Franklin <ikeifeanyi95.ii@gmail.com>
-## 2) Echebiri Prosper Bernard
+## 2) Echebiri Prosper Bernard <prosperbernrad@gmail.com>
