--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 PEOPLE THAT CONTRIBUTED TO THIS PROJECT ARE:
 ------------------------------------------------------------------------------
 ------------------------------------------------------------------------------
-## 1) Ike Ifeanyi Franklin <ikeifeanyi95.ii@gmail.com>
-## 2) Echebiri Prosper Bernard <prosperbernrad@gmail.com>
+1) Ike Ifeanyi Franklin <ikeifeanyi95.ii@gmail.com>
+2) Echebiri Prosper Bernard <prosperbernrad@gmail.com>
